Fix lqd-box content clipping

--- a/common.css
+++ b/common.css
@@ -73,7 +73,6 @@ input[type="file"] {
 
   /* sizing */
   max-width: 500px;
-  max-height: 80%;
   overflow: hidden;
 
   /* appearance */
